[Android] Tweak spacing and sizing of revamped context menu UI

-Add new parameter to native image retrieving methods so they 
 include a max height & max width instead of only a max size.

Per design specs:
-Add spacing above & padding adjacent to the image view.
-Add spacing above and below the text for links.
-Add a max width and max height for images in the context menu.

Bug: 730325
Change-Id: If2552bc27b8fb89771b0d444868148d5189c6e4b
Reviewed-on: https://chromium-review.googlesource.com/742481
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Commit-Queue: Daniel Park <danielpark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513913}
Former-commit-id: 0de667715c86e500f4fa0b3309b4a5c699f7054d